add sertifikat and perbaikan code

--- a/project/project-5.html
+++ b/project/project-5.html
@@ -125,7 +125,7 @@
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
-                                    <h4 class="text-white me-4 mb-0">OmniCommerce</h4>
+                                    <h4 class="text-white me-4 mb-0" style="overflow-wrap: anywhere;">OmniCommerce</h4>
 
                                     <img src="../project-images4/storenits/frontend/frontend-storenits-1.jpg" class="avatar-image img-fluid" alt="">
                                 </div>
@@ -210,7 +210,7 @@
                                     <a data-fslightbox href="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images5/Page-Pemesanan.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Profile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Register.png/Page-Profile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-images5/Page-Profile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Profile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images5/Page-Register.png" class="swiper-slide text-center"><img src="../project-images5/Page-Register.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images5/Page-User.png" class="swiper-slide text-center"><img src="../project-images5/Page-User.png" class="img-fluid" alt=""></a>
                                     <a data-fslightbox href="../project-images5/Pemesanan.PNG" class="swiper-slide text-center"><img src="../project-images5/Pemesanan.PNG" class="img-fluid" alt=""></a>
