--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 <div class="swiper-wrapper">
                                     <a data-fslightbox href="images-parklaring/parklaring-bankjatim.jpg" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/parklaring-fruitylogic.jpg" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
-                                    <a data-fslightbox href="images-parklaring/Sertifikat_Kamar-Pelajar .jpg" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a data-fslightbox href="images-parklaring/Sertifikat_Kamar-Pelajar.jpeg" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
@@ -686,7 +686,7 @@
     
                                 <div class="col-lg-3 col-md-6 col-12 ps-lg-0 js-scroll slide-right">
                                     <div class="contact-info d-flex flex-column">
-                                        <strong class="site-footer-title d-block mb-3">Tentang</strong>
+                                        <strong class="site-footer-title d-block mb-3">Tentang Saya</strong>
     
                                         <p class="mb-2">
                                             Web Developer | Backend Developer | Laravel
