--- a/project/project-5.html
+++ b/project/project-5.html
@@ -154,7 +154,7 @@
                                         <li>Manajemen Produk (multiple image), Warna, Kategori, Supplier</li>
                                         <li>Sistem Cart dan Checkout</li>
                                         <li>Admin Dashboard dengan Statistik & Grafik (Highcharts)</li>
-                                        <li>Notifikasi Email & Database (Queued)</li>
+                                        <li>Notifikasi Email & Database (Queue)</li>
                                         <li>CRUD Barang Masuk / Barang Keluar → Support multiple item saat input → Cetak ke PDF (Barryvdh DomPDF)</li>
                                         <li>DataTables server-side (khusus tabel user di admin)</li>
                                         <li>Manajemen User, Role & Permission (dengan Select2)</li>
@@ -165,8 +165,11 @@
                                         <!-- <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
                                             <img src="../icons-programs/youtube.png" class="hover-code" alt="">
                                         </a> -->
-                                        <a class="code"  href="https://github.com/isulalifajri/storenits-laravel-10" target="_blank" id="tooltip1" title="private">
+                                        <a class="code"  href="https://github.com/isulalifajri/laravel-sim-company.git" target="_blank" id="tooltip1" title="private">
                                             <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
+                                        </a>
+                                        <a class="btn btn-sm btn-info"  href="https://www.youtube.com/playlist?list=PLPqhUmzEEyRYMZFksbW3rMgzJ4vLUtcRx" target="_blank" id="tooltip1" title="demo youtube">
+                                            Demo Project
                                         </a>
                                     </p>
                                 </div>
