change to english

--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                                     <h1 class="hero-title ms-3 mb-0 cuyss">Hello!</h1>
                                 </div>
 
-                                <h2 class="mb-4 text-2">Perkenalkan Nama Saya Isul Alifajri</h2>
-                                <h2 class="mb-4 text-animate">Saya Seorang <span class="typing"></span></h2>
+                                <h2 class="mb-4 text-2">My name is Isul Alifajri</h2>
+                                <h2 class="mb-4 text-animate">I am a <span class="typing"></span></h2>
 
                                 <p class="mb-4">
-                                    <a class="custom-btn btn custom-link seeu" href="#section_3" style="visibility: hidden;">Lihat Project Saya</a>
+                                    <a class="custom-btn btn custom-link seeu" href="#section_3" style="visibility: hidden;">View My Projects</a>
                                 </p>
                             </div>
                         </div>
@@ -199,12 +199,12 @@
                                     <img src="img/heningsunyi.jpg" class="avatar-image img-fluid" alt="isulalifajri">
                                 </div>
 
-                                <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">Sedikit Tentang Saya</h3>
+                                <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">About Me</h3>
 
                                 <div class="card-2 js-scroll fade-in-bottom">
-                                    <p>Haloo! <b>Saya Isul Alifajri.</b> Web Developer dengan 3+ tahun pengalaman dalam mengembangkan website menggunakan bahasa pemrograman PHP, HTML, CSS, Javascript, Jquery, Laravel, Livewire, Codeigniter 3 dan Bootstrap. </p>
+                                    <p>Hello! <b>I'm Isul Alifajri</b>, a Web Developer with over 3 years of experience building websites using PHP, HTML, CSS, JavaScript, jQuery, Laravel, Livewire, CodeIgniter 3, and Bootstrap.</p>
     
-                                    <p>Suka jalan-jalan ke tempat yang sepi tapi tenang, seperti ke daerah bebukitan sambil melihat indahnya pemandangan lembah dan luasnya alam.</p>
+                                    <p>I enjoy visiting peaceful and quiet places, such as hills and valleys, where I can admire the beauty of nature and wide landscapes.</p>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                     <div class="row align-items-center">
 
                         <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5 js-scroll fade-in-zoom">Perusahaan tempat saya pernah magang dan bekerja</h3>
+                            <h3 class="text-center mb-5 js-scroll fade-in-zoom">Companies I Have Worked At</h3>
                         </div>
 
                         <div class="col-lg-6 col-6 m-auto auwoo">
@@ -227,6 +227,7 @@
                                     <a data-fslightbox href="images-parklaring/parklaring-bankjatim.jpg" class="swiper-slide"><img src="image-workplace/logo-bank-jatim.jpg" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/parklaring-fruitylogic.jpg" class="swiper-slide"><img src="image-workplace/fruitylogic.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                     <a data-fslightbox href="images-parklaring/Sertifikat_Kamar-Pelajar.jpeg" class="swiper-slide"><img src="image-workplace/kamar-pelajar.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
+                                    <a data-fslightbox href="image-workplace/cranium.png" class="swiper-slide"><img src="image-workplace/cranium.png" class="clients-image image1 img-fluid text-center" alt="img-work" width="640" height="480"></a>
                                 </div>
                             </div>
                         </div>
