--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 js-scroll fade-in-top">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img src="img/heningsunyi.jpg" class="avatar-image img-fluid" alt="isulalifajri">
+                                    <img src="img/night-sky.jpg" class="avatar-image img-fluid" alt="isulalifajri">
                                 </div>
 
                                 <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">About Me</h3>
