--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <h3 class="card-1 pt-2 mb-3 js-scroll slide-right">About Me</h3>
 
                                 <div class="card-2 js-scroll fade-in-bottom">
-                                    <p>Hello! <b>I'm Isul Alifajri</b>, a Web Developer with over 3 years of experience building websites using PHP, HTML, CSS, JavaScript, jQuery, Laravel, Livewire, CodeIgniter 3, and Bootstrap.</p>
+                                    <p>Hello! <b>I'm Isul Alifajri</b>, a Web Developer with over 3 years of experience building websites using PHP, HTML, CSS, JavaScript, jQuery, Laravel, Livewire, CodeIgniter 3, Vuejs 3, and Bootstrap, Tailwind.</p>
     
                                     <p>I enjoy visiting peaceful and quiet places, such as hills and valleys, where I can admire the beauty of nature and wide landscapes.</p>
                                 </div>
@@ -250,6 +250,53 @@
                         </div>    
 
                             <div class="row pt-lg-5 js-scroll slide-right flex-wrap">
+                                <!-- project 6 -->
+                                <div class="col-md-4">
+                                    <div class="services-thumb-new">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Project 6</h3>
+
+                                            <div class="services-price-wrap ms-auto">
+                                                <p class="services-price-text mb-0 code"><img src="icons-programs/laravelvuejs.png" class="hover-code" alt="laravel"></p>
+                                                <div class="services-price-overlay"></div>
+                                            </div>
+                                        </div>
+
+                                        <div class="swiper swiper-new">
+                                            <div class="swiper-wrapper">
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image6/home.png">
+                                                        <img src="project-image6/home.png" alt="img project 6">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image6/category.png">
+                                                        <img src="project-image6/category.png" alt="img project 6">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image6/liked.png">
+                                                        <img src="project-image6/liked.png" alt="img project 6">
+                                                    </a>
+                                                </div>
+                                                <div class="img-new-prj mb-2 swiper-slide">
+                                                    <a data-fslightbox href="project-image6/show-detail.png">
+                                                        <img src="project-image6/show-detail.png" alt="img project 6">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div class="swiper-pagination swiper-pagination-new"></div>
+                                            <div class="swiper-button-prev swiper-button-prev-new"></div>
+                                            <div class="swiper-button-next swiper-button-next-new"></div>
+                                        </div>
+
+
+                                        <p class="descript-web">Membuat Website News dengan Laravel v12 dan inertia VueJs 3. Untuk informasi Lebih lanjut tentang website ini silahkan klik <b>lihat selengkapnya.</b>
+
+                                        <p><a href="project/project-6.html" target="_blank" class="custom-btn custom-border-btn btn mt-2">lihat selengkapnya</a></p>
+
+                                    </div>
+                                </div>
                                 <!-- project 5 -->
                                 <div class="col-md-4">
                                     <div class="services-thumb-new">
@@ -525,8 +572,16 @@
                                     <h3 class="pe-5 text-white">Bootstrap</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/tailwind.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
+                                    <h3 class="pe-5 text-white">Tailwind</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/js.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
                                     <h3 class="pe-5 text-white">Javascript</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/vuejs.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
+                                    <h3 class="pe-5 text-white">Vuejs</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/php.png" class="images-skill p-2" alt="skill isulalifajri" height="99">
