--- a/project/project-6.html
+++ b/project/project-6.html
@@ -125,9 +125,9 @@
                             <div class="about-thumb">
 
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4 scrolled fade-in-top">
-                                    <h4 class="text-white me-4 mb-0" style="overflow-wrap: anywhere;">OmniCommerce</h4>
+                                    <h4 class="text-white me-4 mb-0" style="overflow-wrap: anywhere;">SkyNews</h4>
 
-                                    <img src="../project-images5/Page-Home-PT-TechnoElectraad.png" class="avatar-image img-fluid" alt="">
+                                    <img src="../project-image6/category.png" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="card-1 pt-2 mb-3 scrolled slide-right">About Web</h3>
@@ -135,37 +135,29 @@
                                 <div class="card-2 scrolled fade-in-bottom font">
                                     <label class="mt-3"><strong>Bahasa Pemrograman dan Database</strong></label>
                                      <ul>
-                                        <li>PHP v8.2.4</li>
-                                        <li>Javascript</li>
-                                        <li>JQuery</li>
-                                        <li>Css</li>
+                                        <li>PHP 8.2</li>
                                         <li>MySQL</li>
+                                        <li>JavaScript (Vue 3, Inertia.js)</li>
+                                        <li>Tailwind CSS 3</li>
                                      </ul>
-                                     <label><strong>Framework :</strong></label>
+                                     <label><strong>Framework & Library</strong></label>
                                      <ul>
-                                        <li>Laravel v10.33.0</li>
-                                        <li>Bootstrap v5 (Sneat Dashboard)</li>
+                                        <li>Laravel 12 + Filament 3 (CMS / Admin Panel)</li>
+                                        <li>Vue 3, Inertia.js</li>
+                                        <li>Swiper.js (slider di homepage)</li>
+                                        <li>Axios (load-more & real-time request)</li>
                                      </ul>
-                                    <label><strong>Fitur-Fitur :</strong></label>
+                                    <label><strong>Fitur Utama :</strong></label>
                                      <ul>
-                                        <li>Responsive Page</li>
-                                        <li>Autentikasi (Login, Register, Forgot Password + reCAPTCHA)</li>
-                                        <li>Midtrans Payment Integration</li>
-                                        <li>Manajemen Produk (multiple image), Warna, Kategori, Supplier</li>
-                                        <li>Sistem Cart dan Checkout</li>
-                                        <li>Admin Dashboard dengan Statistik & Grafik (Highcharts)</li>
-                                        <li>Notifikasi Email & Database (Queue)</li>
-                                        <li>CRUD Barang Masuk / Barang Keluar → Support multiple item saat input → Cetak ke PDF (Barryvdh DomPDF)</li>
-                                        <li>DataTables server-side (khusus tabel user di admin)</li>
-                                        <li>Manajemen User, Role & Permission (dengan Select2)</li>
-                                        <li>Responsive Frontend → Swiper.js slider → Load More Produk → Real-time Search (AJAX)</li>
-                                        <li>Type Data in Database : uuid(primary key), string, json(crud sosmed), int, boolean, datetime(timestamp)</li>
+                                        <li>Responsive Frontend dengan Inertia & Vue 3</li>
+                                        <li>Login / Register via Google OAuth</li>
+                                        <li>Halaman Home dengan Swiper, Trending & Popular News</li>
+                                        <li>Favorit & Liked Post, Category Filter, Infinite Load More</li>
+                                        <li>Backend CRUD: Post, Category, Company Profile, Contact</li>
+                                        <li>Role & Permission (Spatie) + Policy</li>
                                      </ul>
                                     <p><strong>Dokumentasi :</strong>
-                                        <!-- <a class="code"  href="https://youtu.be/1bb9KVwRf5o" target="_blank">
-                                            <img src="../icons-programs/youtube.png" class="hover-code" alt="">
-                                        </a> -->
-                                        <a class="code"  href="https://github.com/isulalifajri/laravel-sim-company.git" target="_blank" id="tooltip1" title="private">
+                                        <a class="code"  href="https://github.com/isulalifajri/project-news-laravel-vuejs.git" target="_blank" id="tooltip1" title="private">
                                             <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
                                         </a>
                                         <a class="btn btn-sm btn-info"  href="https://www.youtube.com/playlist?list=PLPqhUmzEEyRYMZFksbW3rMgzJ4vLUtcRx" target="_blank" id="tooltip1" title="demo youtube">
@@ -183,46 +175,27 @@
                                 jadi, jika ingin melihat detail image, silahkan klik image tersebut. </label>
                             <div class="swiper swiper1" style="margin-bottom:20px;">
                                 <div class="swiper-wrapper">
-                                    <a data-fslightbox href="../project-images5/Page-Home-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Home-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Bayar-Sekarang-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Bayar-Sekarang-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Cetak-Barang-Masuk-PDF.png" class="swiper-slide text-center"><img src="../project-images5/Cetak-Barang-Masuk-PDF.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Cetak-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Cetak-Barang-Masuk.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Cetak-PDF.PNG" class="swiper-slide text-center"><img src="../project-images5/Cetak-PDF.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Data-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Data-Barang-Masuk.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Data-Barang.png" class="swiper-slide text-center"><img src="../project-images5/Data-Barang.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Data-Manajamen-Akun.png" class="swiper-slide text-center"><img src="../project-images5/Data-Manajamen-Akun.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/email-notification.PNG" class="swiper-slide text-center"><img src="../project-images5/email-notification.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Master-Barang.png" class="swiper-slide text-center"><img src="../project-images5/Master-Barang.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/notifikasi-superadmin.PNG" class="swiper-slide text-center"><img src="../project-images5/notifikasi-superadmin.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-About-Us-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-About-Us-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Cart-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Cart-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Change-Password-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Change-Password-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Company-Profile.png" class="swiper-slide text-center"><img src="../project-images5/Page-Company-Profile.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Create-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Page-Create-Barang-Masuk.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Create-Barang-Terjual.png" class="swiper-slide text-center"><img src="../project-images5/Page-Create-Barang-Terjual.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Dashboard.png" class="swiper-slide text-center"><img src="../project-images5/Page-Dashboard.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Detail-Barang-Masuk.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Barang-Masuk.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Detail-Order-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Order-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Detail-Status-Order-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Status-Order-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Detail-Status-Order.png" class="swiper-slide text-center"><img src="../project-images5/Page-Detail-Status-Order.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Forgot-Password.PNG" class="swiper-slide text-center"><img src="../project-images5/Page-Forgot-Password.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Home-PT-TechnoElectraad.png" class="swiper-slide text-center"><img src="../project-images5/Page-Home-PT-TechnoElectraad.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-HomeVMobile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-HomeVMobile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/page-login.PNG" class="swiper-slide text-center"><img src="../project-images5/page-login.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Notification-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Notification-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Pemesanan.png" class="swiper-slide text-center"><img src="../project-images5/Page-Pemesanan.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-PemesananVMobile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Profile-PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/Page-Profile-PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-Register.png" class="swiper-slide text-center"><img src="../project-images5/Page-Register.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Page-User.png" class="swiper-slide text-center"><img src="../project-images5/Page-User.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Pemesanan.PNG" class="swiper-slide text-center"><img src="../project-images5/Pemesanan.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/PT-TechnoElectra.png" class="swiper-slide text-center"><img src="../project-images5/PT-TechnoElectra.png" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Reset-Password.PNG" class="swiper-slide text-center"><img src="../project-images5/Reset-Password.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Reset-Password2.PNG" class="swiper-slide text-center"><img src="../project-images5/Reset-Password2.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/search-result.PNG" class="swiper-slide text-center"><img src="../project-images5/search-result.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/update-profile-image.PNG" class="swiper-slide text-center"><img src="../project-images5/update-profile-image.PNG" class="img-fluid" alt=""></a>
-                                    <a data-fslightbox href="../project-images5/Update-profile.PNG" class="swiper-slide text-center"><img src="../project-images5/Update-profile.PNG" class="img-fluid" alt=""></a>
+                                    <a data-fslightbox href="../project-image6/home.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/home.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/category.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/category.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/search.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/search.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/liked.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/liked.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/show-detail.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/show-detail.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/cms-roles.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/cms-roles.png" class="img-fluid" alt="">
+                                    </a>
+                                    <a data-fslightbox href="../project-image6/cms-role-edit.png" class="swiper-slide text-center">
+                                        <img src="../project-image6/cms-role-edit.png" class="img-fluid" alt="">
+                                    </a>
                                 </div>
                                 <div class="swiper-pagination swiper-pagination1"></div>
                                 <div class="swiper-button-prev swiper-button-prev1"></div>
