--- a/project/project-6.html
+++ b/project/project-6.html
@@ -160,7 +160,7 @@
                                         <a class="code"  href="https://github.com/isulalifajri/project-news-laravel-vuejs.git" target="_blank" id="tooltip1" title="private">
                                             <img src="../icons-programs/github.png" class="hover-code" alt="" style="transform: scale(1.4);">
                                         </a>
-                                        <a class="btn btn-sm btn-info"  href="https://www.youtube.com/playlist?list=PLPqhUmzEEyRYMZFksbW3rMgzJ4vLUtcRx" target="_blank" id="tooltip1" title="demo youtube">
+                                        <a class="btn btn-sm btn-info"  href="https://youtu.be/Ue8Qx7wCpek" target="_blank" id="tooltip1" title="demo youtube">
                                             Demo Project
                                         </a>
                                     </p>
