--- a/project/project-6.html
+++ b/project/project-6.html
@@ -22,7 +22,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-        <title>Project Fifth</title>
+        <title>Project Sixth</title>
         <meta name="description" content="Halo, Saya Isul Alifajri.. Berpengalaman 3+ tahun dalam mengembangkan website menggunakan laravel dan bootstrap">
         <meta name="keywords" content="Isul Alifajri, Izul Alifajri, Web Developer, Backend Developer, Frontend Developer, Software Developer" />
         <meta name="author" content="isulalifajri">
