--- a/index.html
+++ b/index.html
@@ -159,8 +159,10 @@
                                     <h1 class="hero-title ms-3 mb-0 cuyss">Hello!</h1>
                                 </div>
 
-                                <h2 class="mb-4 text-2">My name is Isul Alifajri</h2>
-                                <h2 class="mb-4 text-animate">I am a <span class="typing"></span></h2>
+                                <h2 class="mb-4 text-2 mr-2">My name is Isul Alifajri</h2>
+                                <div>
+                                    <h2 class="mb-4 text-animate">I am a <span class="typing"></span></h2>
+                                </div>
 
                                 <p class="mb-4">
                                     <a class="custom-btn btn custom-link seeu" href="#section_3" style="visibility: hidden;">View My Projects</a>
@@ -608,6 +610,10 @@
                                     <h3 class="pe-5 text-white">Postman</h3>
                                 </div>
                                 <div class="d-flex align-items-center new-skills px-2">
+                                    <img src="images/skill/swagger.png" class="images-skill p-2" alt="skill isulalifajri" eight="99">
+                                    <h3 class="pe-5 text-white">Swagger</h3>
+                                </div>
+                                <div class="d-flex align-items-center new-skills px-2">
                                     <img src="images/skill/rest-api-icon.webp" class="images-skill p-2" alt="skill isulalifajri" eight="99">
                                     <h3 class="pe-5 text-white">Rest API</h3>
                                 </div>
@@ -745,7 +751,7 @@
                                         <strong class="site-footer-title d-block mb-3">Tentang Saya</strong>
     
                                         <p class="mb-2">
-                                            Web Developer | Backend Developer | Laravel
+                                            Web Developer | Fullstack Developer | Backend Developer | Laravel | VueJS
                                   </p>
     
                                         <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
@@ -832,7 +838,7 @@
         <script>
             $(document).ready(function(){
              var typed = new Typed(".typing", {
-                    strings:["Web Developer","Backend Developer","Freelancer"],
+                    strings:["Web Developer","Fullstack Developer","Backend Developer","Frontend Developer"],
                     typeSpeed:100,
                     backSpeed:60,
                     loop:true
